--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-node-fetch-client",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
   "description": "",
   "main": "./dist/index.js",
   "files": [
