--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ts-node-fetch-client",
-  "version": "1.0.0-beta",
+  "version": "1.0.1",
   "description": "",
   "main": "./dist/index.js",
   "files": [
-    "src",
     "dist"
   ],
   "scripts": {
